--- a/MobileClient/.cproject
+++ b/MobileClient/.cproject
@@ -12,4 +12,5 @@
 	<storageModule moduleId="org.eclipse.cdt.core.pathentry">
 		<pathentry kind="con" path="com.mobilesorcery.mosync.includepaths"/>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 </cproject>
