* Changed player units to be dynamically colorized based on the unit hue. All pixels with hue == 0 are colorized to player color. Caches each unit each color and reuses them, first invoke might be a bit slow. * Removed obsolete assets of units with different

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -70,6 +70,8 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CTileRendering.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CUnitRendering.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\GameWorldRenderer.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\Colors.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteColorizeManager.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\RenderEvents.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionFogRenderingSystem.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionsRenderingSystem.js" />
