--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -218,6 +218,12 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\Colors.js">
       <Filter>Javascript\Render\ImageUtils</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\AnimationRenderUpdateSystem.js">
+      <Filter>Javascript\Render\Systems</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteTracker.js">
+      <Filter>Javascript\Render\ImageUtils</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
