* Added Capture unit action for the TeslaTroopers. * Implemented capturing system/flow. Now any tiles with CTileOwner can be captured in any number of turns. * Refreshing visibility fog & game state on capturing building. * If action is special kind (like Capture) it is executed instantly, rather than having to click on a tile. * Changed colorize and saturate functions to always work with original sprite.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -30,6 +30,7 @@
     <None Include="..\..\Core\Engine\Utils\Subscriber.js" />
     <None Include="..\..\Core\Engine\Utils\Utils.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionAttack.js" />
+    <None Include="..\..\Core\Gameplay\Actions\ActionCapture.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionMove.js" />
     <None Include="..\..\Core\Gameplay\Components\CActions.js" />
     <None Include="..\..\Core\Gameplay\Components\CEffects.js" />
@@ -48,6 +49,7 @@
     <None Include="..\..\Core\Gameplay\Systems\EffectsSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\GameStateSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\TileBaseSystem.js" />
+    <None Include="..\..\Core\Gameplay\Systems\TileCapturingSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\TileVisibilitySystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\UnitsSystem.js" />
     <None Include="..\..\Core\Gameplay\TerrainType.js" />
