--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -248,6 +248,15 @@
     <None Include="..\..\Core\Gameplay\Systems\TileCapturingSystem.js">
       <Filter>Javascript\Core\Gameplay\Systems</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\persist.js">
+      <Filter>Javascript\3rdParty</Filter>
+    </None>
+    <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground.html">
+      <Filter>InternalTools\SpriteTestground</Filter>
+    </None>
+    <None Include="..\..\Internal Tools\Libs\jscolor\jscolor.js">
+      <Filter>InternalTools\Libs\jscolor</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -312,6 +321,18 @@
     </Filter>
     <Filter Include="Javascript\Render\ImageUtils">
       <UniqueIdentifier>{b3c7bc5b-f53f-4c1c-b7f1-31a91a8a4326}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="InternalTools">
+      <UniqueIdentifier>{9b209de6-adc4-45c2-a97d-38a197ccbbd2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="InternalTools\SpriteTestground">
+      <UniqueIdentifier>{89b0d138-9d6f-4639-bf9e-f9bb1a70d03c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="InternalTools\Libs">
+      <UniqueIdentifier>{23d43334-6de8-490f-b540-16a017793d89}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="InternalTools\Libs\jscolor">
+      <UniqueIdentifier>{0dd587dc-c0df-4ef6-8a34-6a427ef7fa4e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
