--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -56,6 +56,7 @@
     <None Include="..\..\Internal Tools\Libs\jscolor\jscolor.js" />
     <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground.html" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\ActionMenu.css" />
+    <None Include="..\..\MobileClient\LocalFiles\Assets\DevConsole.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Main.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\GameWorldRenderer.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\Placeables.css" />
@@ -70,6 +71,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\wormhole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ActionsMenuController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\DevConsole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Main.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\PlayerController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ActionsRender.js" />
