--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -263,6 +263,9 @@
     <None Include="..\..\MobileClient\LocalFiles\Assets\DevConsole.css">
       <Filter>Assets</Filter>
     </None>
+    <None Include="..\..\Core\Gameplay\Actions\ActionStay.js">
+      <Filter>Javascript\Core\Gameplay\Actions</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
