* Added BattleSystem.js which can give prediction of the outcome of the battle and handles battle itself. * Changed the battle formula to be based on the strengths ratio. Health is taken into account. All units now have MaxHealth 10. * Health is not shown anymore when equals to MaxHealth. Also it is rounded. * Added "destroyed" flag to the entity. Invalidated entities keep this flag. * Fixed exception, when attacker is destroyed in battle.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -50,6 +50,7 @@
     <None Include="..\..\Core\Gameplay\PlaceableFactory\UnitsDefinitions.js" />
     <None Include="..\..\Core\Gameplay\Store.js" />
     <None Include="..\..\Core\Gameplay\PlayersData.js" />
+    <None Include="..\..\Core\Gameplay\Systems\BattleSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\EffectsSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\GameStateSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\TileBaseSystem.js" />
