--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -284,6 +284,15 @@
     <None Include="..\..\Core\Gameplay\Systems\BattleSystem.js">
       <Filter>Javascript\Core\Gameplay\Systems</Filter>
     </None>
+    <None Include="..\..\Internal Tools\BattleTestground\BattleTestground.html">
+      <Filter>InternalTools\BattleTestground</Filter>
+    </None>
+    <None Include="..\..\Internal Tools\BattleTestground\BattleTestground-Main.js">
+      <Filter>InternalTools\BattleTestground</Filter>
+    </None>
+    <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground-Main.js">
+      <Filter>InternalTools\SpriteTestground</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -360,6 +369,9 @@
     </Filter>
     <Filter Include="InternalTools\Libs\jscolor">
       <UniqueIdentifier>{0dd587dc-c0df-4ef6-8a34-6a427ef7fa4e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="InternalTools\BattleTestground">
+      <UniqueIdentifier>{cb72d8d1-2d1e-4f07-923c-f3ac6026dfdf}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
