* Added a flow to un-initialize client states. Now a state can be easily changed from one to another. * Added destroy method to the ECS.EntityWorld which destroys all systems and entities. * Added destroy method to the SpriteTracker, that restores original sjs functions. * Fixed critical bug in the Subscriber.unsubscribeAll method. * Implemented the un-initialize functionality of the TestGame state. (Editor is on the way). * Added functionality to change TestGame/WorldEditor by passing "WorldEditor" as parameter to the url.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -293,6 +293,15 @@
     <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground-Main.js">
       <Filter>InternalTools\SpriteTestground</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\TestGame.js">
+      <Filter>Javascript\ClientStates</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\WorldEditor.js">
+      <Filter>Javascript\ClientStates</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStates.js">
+      <Filter>Javascript\ClientStates</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -372,6 +381,9 @@
     </Filter>
     <Filter Include="InternalTools\BattleTestground">
       <UniqueIdentifier>{cb72d8d1-2d1e-4f07-923c-f3ac6026dfdf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Javascript\ClientStates">
+      <UniqueIdentifier>{ebca7fa5-191d-481b-ae6a-7b4ae1fbeb57}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
