--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -80,7 +80,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\wormhole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ActionsMenuController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStates.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\TestGame.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\WorldEditor.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\DevConsole.js" />
