* Added basic flow for state changing. * Re-organized the WorldEditor to work with the new flow and implemented basics. Empty tile is shown. * Fixed bug in EntityWorld on destroying missing systems. * Fixed forced redraw of world layers on GAME_LOADED event.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -299,7 +299,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\WorldEditor.js">
       <Filter>Javascript\ClientStates</Filter>
     </None>
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStates.js">
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js">
       <Filter>Javascript\ClientStates</Filter>
     </None>
   </ItemGroup>
