* Fixed: iScroll 5 not working on HTC-Explorer device (missing bind function). Added more timeout for initializing as well. * Improved backward compatibility by adding bind function if missing.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -79,6 +79,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\sylvester.src.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\wormhole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ActionsMenuController.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BrowserBackwardCompatibility.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\TestGame.js" />
