--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -65,13 +65,15 @@
     <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground.html" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\ActionMenu.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\DevConsole.css" />
+    <None Include="..\..\MobileClient\LocalFiles\Assets\Dialogs.css" />
+    <None Include="..\..\MobileClient\LocalFiles\Assets\Editor.css" />
+    <None Include="..\..\MobileClient\LocalFiles\Assets\Game.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Main.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\GameWorldRenderer.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\Placeables.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\Base.js" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\TileRenderingSystem.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Store.css" />
     <None Include="..\..\MobileClient\LocalFiles\index.html" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\iscroll.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\persist.js" />
@@ -86,8 +88,9 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\WorldEditor.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\DevConsole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Brushes.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\EditorController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\EditorEvents.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Systems\EditorController.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Systems\EditorUnitPropertiesController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Main.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\PlayerController.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ActionsRender.js" />
